crates/escalier_parser/src/snapshots/escalier_parser__tests__function_application-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"foo(a, b);\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 10,
                    },
                },
                span: 0..10,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 0..9,
                    kind: App(
                        App {
                            lam: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 3,
                                    },
                                },
                                span: 0..3,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 3,
                                            },
                                        },
                                        span: 0..3,
                                        name: "foo",
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                        },
                                        span: 4..5,
                                        kind: Ident(
                                            Ident {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 4,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                },
                                                span: 4..5,
                                                name: "a",
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 7,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 8,
                                            },
                                        },
                                        span: 7..8,
                                        kind: Ident(
                                            Ident {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 7,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 8,
                                                    },
                                                },
                                                span: 7..8,
                                                name: "b",
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ],
                            type_args: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
