crates/escalier_parser/src/snapshots/escalier_parser__tests__function_application-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"f(x)(g(x));\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 10,
                        },
                    },
                    span: 0..10,
                    kind: App(
                        App {
                            lam: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 4,
                                    },
                                },
                                span: 0..4,
                                kind: App(
                                    App {
                                        lam: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                            },
                                            span: 0..1,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 1,
                                                        },
                                                    },
                                                    span: 0..1,
                                                    name: "f",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        args: [
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 2,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 3,
                                                        },
                                                    },
                                                    span: 2..3,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 2,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 3,
                                                                },
                                                            },
                                                            span: 2..3,
                                                            name: "x",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ],
                                        type_args: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 9,
                                            },
                                        },
                                        span: 5..9,
                                        kind: App(
                                            App {
                                                lam: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                    span: 5..6,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 5,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 6,
                                                                },
                                                            },
                                                            span: 5..6,
                                                            name: "g",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                args: [
                                                    ExprOrSpread {
                                                        spread: None,
                                                        expr: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 7,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                            },
                                                            span: 7..8,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 7,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 8,
                                                                        },
                                                                    },
                                                                    span: 7..8,
                                                                    name: "x",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ],
                                                type_args: None,
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ],
                            type_args: None,
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
