crates/escalier_parser/src/snapshots/escalier_parser__tests__function_definition-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"() => 10;\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 9,
                    },
                },
                span: 0..9,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 8,
                        },
                    },
                    span: 0..8,
                    kind: Lambda(
                        Lambda {
                            params: [],
                            body: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                },
                                span: 6..8,
                                kind: Lit(
                                    Num(
                                        Num {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 6,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                            },
                                            span: 6..8,
                                            value: "10",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
